Restructured project into semblance of Python module. Adding tests and binary execution. Preparing to start adding functionality beyond the config parsing itself.

--- a/gamedata/include/steam.yaml
+++ b/gamedata/include/steam.yaml
@@ -15,7 +15,7 @@ steam:
       desc: "Update game on start"
     "beta":
       parm: "-beta"
-      default: 
+      default: ""
       desc: "Beta branch to use. Leave empty for stable branch"
   scriptactions:
     force-update:
