--- a/gamedata/include/workshop.yaml
+++ b/gamedata/include/workshop.yaml
@@ -14,6 +14,7 @@ workshop:
     "workshop_start_map":
       parm: "+workshop_start_map"
       desc: "Workshop Start Map"
+      default: ""
     "sv_workshop_enabled":
       parm: "+sv_workshop_enabled"
       desc: "Workshop Enabled"
